tools/computer.c
@@ -114,6 +114,7 @@ typedef enum {
 	opt_remove_service_principal,
 	opt_description,
 	opt_use_ldaps,
+	opt_account_disable,
 } Option;
 
 static adcli_tool_desc common_usages[] = {
@@ -143,6 +144,8 @@ static adcli_tool_desc common_usages[] = {
 	{ opt_computer_password_lifetime, "lifetime of the host accounts password in days", },
 	{ opt_trusted_for_delegation, "set/unset the TRUSTED_FOR_DELEGATION flag\n"
 	                              "in the userAccountControl attribute", },
+	{ opt_account_disable, "set/unset the ACCOUNTDISABLE flag\n"
+	                       "in the userAccountControl attribute", },
 	{ opt_add_service_principal, "add the given service principal to the account\n" },
 	{ opt_remove_service_principal, "remove the given service principal from the account\n" },
 	{ opt_description, "add a description to the account\n" },
@@ -304,6 +307,13 @@ parse_option (Option opt,
 			adcli_enroll_set_trusted_for_delegation (enroll, false);
 		}
 		return ADCLI_SUCCESS;
+	case opt_account_disable:
+		if (strcasecmp (optarg, "true") == 0 || strcasecmp (optarg, "yes") == 0) {
+			adcli_enroll_set_account_disable (enroll, true);
+		} else {
+			adcli_enroll_set_account_disable (enroll, false);
+		}
+		return ADCLI_SUCCESS;
 	case opt_add_service_principal:
 		adcli_enroll_add_service_principal_to_add (enroll, optarg);
 		return ADCLI_SUCCESS;
@@ -456,6 +466,8 @@ adcli_tool_computer_join (adcli_conn *conn,
 		return -res;
 	}
 
+	/* Make sure account is enabled after the join */
+	adcli_enroll_set_account_disable (enroll, false);
 	res = adcli_enroll_join (enroll, flags);
 	if (res != ADCLI_SUCCESS) {
 		warnx ("joining domain %s failed: %s",
@@ -504,6 +516,7 @@ adcli_tool_computer_update (adcli_conn *conn,
 		{ "user-principal", optional_argument, NULL, opt_user_principal },
 		{ "computer-password-lifetime", optional_argument, NULL, opt_computer_password_lifetime },
 		{ "trusted-for-delegation", required_argument, NULL, opt_trusted_for_delegation },
+		{ "account-disable", required_argument, NULL, opt_account_disable },
 		{ "add-service-principal", required_argument, NULL, opt_add_service_principal },
 		{ "remove-service-principal", required_argument, NULL, opt_remove_service_principal },
 		{ "show-details", no_argument, NULL, opt_show_details },
